src/objects/Client_Education__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Education</relationshipLabel>
        <relationshipName>Client_Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>A.I.S. Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BICS Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Institute of Cleaning Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - D &amp; HGV License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert - EN287 - Advanced T.I.G. and M.M.A. In pipe sheet metal and plate metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - ECDL - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Fetac Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Introduction to welding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Junior Trades - Fetac Level - Fas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Small Offset Printing - ECDL - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.P.L. - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECDL - Advanced E.C.D.L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECDL - Typequick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failte - EHB Hygiene Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failte - Leonardo - Essential Food Safety Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS - Fetac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Fas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo - EHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo - Hygiene Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1 - Desk Top Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1 - Leather Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I.A.S. Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Certification at present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other (e.g. FAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Education</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>